Typo/better form

--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -36,7 +36,7 @@ that `Julia` is primarily used for the numeric style of computing and
 the algebraic/symbolic treatment is added on. Doing the symbolic
 treatment by hand can be very beneficial while learning, and computer
 algebra systems make those exercises seem kind of redundant, as the
-finished product can be produced much easier.
+finished product can be produced much more easily.
 
 Our real goal is to get at the concepts using technology as much as
 possible without getting bogged down in the mechanics of the computer
