--- a/quarto/integrals/center_of_mass.qmd
+++ b/quarto/integrals/center_of_mass.qmd
@@ -344,6 +344,18 @@ Here the center of mass is below $1/2$ as the bulk of the area is. (The bottom a
 As seen, the computation of the center of mass in the $y$ direction has an identical formula, though may be more involved if an inverse function must be computed.
 
 
+::: {.callout-note}
+#### An alternative formula
+
+An alternative formula, which is easily derived once double integrals are introduced, to find the center of mass in the $y$ direction is
+
+$$
+\text{cm}_y = \frac{\int_a^b \frac{1}{2}(f(x)^2 - g(x)^2) dx}{\int_a^b (f(x) -g(x)) dx}.
+$$
+
+:::
+
+
 ##### Example
 
 
