--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -528,7 +528,7 @@ For example:
 lim(f, c)
 ```
 
-The numbers are displayed in decreasing order so the values on the left are read from top to bottom:
+The numbers are displayed in decreasing order so the values on the left side of $c$ are read from bottom to top:
 
 ```{julia}
 lim(f, c; dir="-")  # or even lim(f, c, -)
